css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1;
}

html {
  box-sizing: border-box;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  line-height: 1.3;
}

body {
  margin: 0;
}

.img-flex {
  width: 100%;
  margin: 0;
  display: block;
}

.caption {
  background-color: #e2e2e2;
  padding: 1px 10px;
}

h2 {
  font-family: "Denk One", sans-serif;
  font-size: 1.5rem;
}

p {
  font-family: "Georgia", serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

@media only screen and (min-width: 38em) {
  html {
    font-size: 110%;
    line-height: 1.4;
  }

  .img-flex {
    position: absolute;
  }
  .caption {
    position: relative;
    bottom: 1em;
    border-radius: 1em;
    background-color: rgba(0, 0, 0, .3)
  }
  h2 {
    color: #e2e2e2;
  }
  p {
    color: #e2e2e2;
  }
}

@media only screen and (min-width: 60em) {
  html {
    font-size: 120%;
    line-height: 1.5;
  }
}

@media only screen and (min-width: 90em) {
  html {
    font-size: 130%;
    line-height: 1.5;
  }
}

